--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Lazy Lecture</title>
     <link rel="shortcut icon" href="//gavinpereira.in/img/fav/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="sass/style.css">
-    <script src="js/script.js" defer type="module"></script>
+    <script src="js/apikey.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
