--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lazy Lecture</title>
+    <title>Shortkurt</title>
     <link rel="shortcut icon" href="//gavinpereira.in/img/fav/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="sass/style.css">
     <script src="js/apikey.js" defer></script>
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="//github.com/pexeixv/lazy-lecture" class="fork" target="_blank">
+    <a href="//github.com/pexeixv/shortkurt" class="fork" target="_blank">
         <img src="img/fork.png">
     </a>
 
