--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </a>
 
     <button onclick="toggleColorMode()">
-        <img class="color-mode" src="">
+        <img class="color-mode" src="./moon.svg">
     </button>
 
     <main>
